Fix some additional bugs on mobile devices

--- a/style.css
+++ b/style.css
@@ -25,7 +25,9 @@ h2 {
     text-align: center;
     font-size: 2rem;
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
+    padding-left: 18px;
+    padding-right: 18px;
 }
 
 h3 {
@@ -40,8 +42,8 @@ h3 {
     background-color: #363636;
     color: #ffffff;
     border-radius: 10px;
-    padding: 20px;
     margin: 20px 0;
+    box-sizing: border-box;
     width: 100%;
     max-width: 400px;
 
@@ -78,9 +80,9 @@ button {
     border-radius: 40px;
     padding: 14px;
     font-weight: bold;
-    width: 100%;
+    width: 85%;
     cursor: pointer;
-    margin-top: 10px;
+    margin-bottom: 15px;
 }
 
 button.hover {
